Remove jquery from index.jelly
Co-authored-by: MrXayss <s.sazono23@gmail.com>
Co-authored-by: wtrghux <grechko_kostya@mail.ru>